- Abstraction has been added. - Controllers have been created. - Mapper has been integrated. - DI has been integrated.

--- a/Challenge.API/appsettings.json
+++ b/Challenge.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "PostgreConnectionString": "Server=localhost;Port=5432;Database=CHALLENGEDB;userId=postgres;Password=1;"
+  },
   "AllowedHosts": "*"
 }
